Updating Other tabs styling

--- a/modules/report/css/commerce_pos_report.css
+++ b/modules/report/css/commerce_pos_report.css
@@ -37,7 +37,7 @@
   line-height: 1;
   margin-right: 30px;
 }
-#commerce-pos-report-sales-report #commerce-pos-report-journal-role-options-container{
+#commerce-pos-report-journal-role-options-container{
   text-align: right;
 }
 .date-padding .form-item:last-child{
