--- a/sass/commerce_pos_style.scss
+++ b/sass/commerce_pos_style.scss
@@ -3,9 +3,9 @@
 @import 'base';
 @import 'header';
 @import 'pay';
-@import 'reports';
 @import 'sale';
 @import 'search';
 @import 'sidebar';
 @import 'layout';
-@import 'cashier';
+@import 'layout';
+@import 'layout';
