--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,34 @@
+/* POS side bar styles */
+.layout-pos-form{
+  box-sizing: border-box;
+}
+.layout-region-pos-main {
+  float: left;
+  width: 66.66%;
+}
+
+.layout-region-pos-sidebar {
+  float: right;
+  width: 29.33%;
+  padding-left: 40px;
+}
+@media screen and (max-width: 767px) {
+  .layout-region-pos-main {
+    float: none;
+    width: auto;
+  }
+  .layout-region-pos-sidebar {
+    float: none;
+    width: auto;
+    padding-top:40px;
+    padding-left: 0;
+  }
+}
+
+.form-submit {
+  margin-top: 20px;
+}
+
 .commerce-pos-keypad {
   width: 75%
 }
